# talon-gaze-ocr

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  browser_smooth_scrolling.talon  chromium_smooth_scrolling.talon  emacs_settings.talon  gaze_ocr.py  gaze_ocr.talon  gaze_ocr_disambiguation.talon  gaze_ocr_talon.py  gaze_ocr_unprefixed_scroll.talon  ocr_actions.talon-list  ocr_common_actions.talon-list  pull_all.ps1  pull_all.sh  push_all.ps1  push_all.sh  pyproject.toml  scroll_detection.py  scroll_probe_cache.py  settings_mac.talon  settings_windows.talon  setup.py  timestamped_captures.py
.claude/skills/commit-main/: SKILL.md
.debug/: benchmark_scroll_detection.py  conftest.py  debug_scroll.py  pyproject.toml  test_debug_scroll.py  test_scroll_detection.py
.github/: dependabot.yml  push_subtrees.yml
.github/workflows/: publish.yml  push_subtrees.yml  test.yml
.subtrees/gaze-ocr/: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.subtrees/gaze-ocr/gaze_ocr/: __init__.py  _gaze_ocr.py  dragonfly.py  eye_tracking.py  talon.py  talon_adapter.py
.subtrees/gaze-ocr/tests/: ocr_cache_test.py
.subtrees/screen-ocr/: README.md  pyproject.toml  requirements.txt  screen_ocr_tool.py  setup.py  test_screenshot_performance.py
.subtrees/screen-ocr/screen_ocr/: __init__.py  __main__.py  _base.py  _easyocr_server.py  _easyocr_talon.py  _screen_ocr.py  _talon.py  _tesseract.py  _winrt.py
.tests/: benchmark_scroll_detection.py  conftest.py  test_debug_scroll.py  test_scroll_detection.py  test_scroll_detection_real.py  test_scroll_probe_cache.py
.tools/: debug_scroll.py  mac_transparent_overlay.m  mac_window_probe.m
gaze_ocr/: _gaze_ocr.py  eye_tracking.py  talon.py
screen_ocr/: _screen_ocr.py  _talon.py  _winrt.py
src/rapidfuzz/: process_cdist_py.py
(+6 files in other folders)
