[project]
name = "talon-gaze-ocr-debug"
version = "0.1.0"
description = "Debug and test tools for talon-gaze-ocr scroll detection"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = []
